commit21 message_sending_function.  Corrected collapsed view (element in footer)

--- a/app/assets/stylesheets/_chatmain.scss
+++ b/app/assets/stylesheets/_chatmain.scss
@@ -1,39 +1,40 @@
 .chat {
   width: calc(100vw - 300px);
   margin-left: 300px;
+
   .header {
     height: 100px;
     width: calc(100vw - 300px);
     background-color: white;
-    // padding: 0px, 40px, 0px;
     left: 300px;
+    padding-right: 40px;
+
     .left-header {
       height: 100px;
       width: calc(100vw - 70%);
       background-color: white;
-
-      // padding: 0px, 40px, 0px;
       left: 600px;
       float: left;
+
       .left-header__title {
         font-size: 20px;
         color: #333333;
         padding: 35px 0px 0px 40px;
+
         .Members {
           font-size: 12px;
           color: #999999;
           background-color: white;
-          // background-color: #46EEFF;
           padding: 15px 0px 0px 0px;
-          ul.left-header__members {
+
+          .left-header__members {
             font-size: 12px;
             color: #999999;
-            // background-color: #46EEFF;
             padding: 0px 0px 0px 40px;
             left: 40px;
-            // display: -webkit-flex;
             display: flex;
-            li.member {
+
+              .member {
               font-size: 12px;
               color: #999999;
               margin: -17px 0px 0px 31px;
@@ -42,25 +43,31 @@
         }
       }
     }
+
     .right-header {
-      // height: 100px;
       width: 13%;
-      // margin: -97px -183px 0px 0px;
       text-align:center;
       float: right;
       color: #38AEF0;
+
       .right-header__buttoms {
         height: 40px;
         width: 60px;
         background-color: white;
-        margin: 28px 40px 28px 40px;
+        margin: 28px 40px;
+
         .right-header__buttom {
           border: 1px solid;
           border-color: #38AEF0;
-          // float: right;
           text-align: center;
-          // padding: 10px 20px 10px 20px;
-          // color: #38AEF0;
+          padding: 10px 0px;
+          width: 71px;
+
+          .right-header__buttom__edit {
+          text-decoration: none;
+          text-align: center;
+          margin: 20px 20px;
+          }
         }
       }
     }
@@ -70,16 +77,20 @@
     height: 810px;
     width: calc(100vw - 300px);
     background-color: #EEEEEE;
-    padding: 0px, 40px, 0px;
     top: 100px;
+
     .message {
+      padding: 0px 40px 0px 0px;
+
       .upper-message {
         padding: 46px 0px 15px 40px;
+
         .upper-message__user-name {
           color: #434A54;
           font-weight: bold;
           font-size: 16px;
         }
+
         .upper-message__date {
           display: inline-block;
           font-size: 12px;
@@ -88,11 +99,13 @@
           margin-left: 10px;
         }
       }
+
       .lower-message {
+
         p.lower-message__content {
           font-size: 14px;
           color: #434A54;
-          padding: 0px 0px 40px 40px;
+          padding: 0px 0px 0px 40px;
         }
       }
     }
@@ -100,54 +113,48 @@
 
   .footer {
     height: 90px;
-    width: calc(100vw - 300px);
-    // background-color: #C0C0C0;
+    width: 100%;
     background-color: #AAAAAA;
-    left: 300px;
+
     .form {
-      height: 90px;
-      width: calc(100vw - 300px);
+      // height: 90px;
+      // box-sizing: border-box;
+      width: 100%;
+      margin: 0px 40px;
       .form__message {
         height: 50px;
-        line-height: 50px;
-        width: calc(100vw - 477px);
-        margin: 20px 0px 20px 40px;
-        .text_field {
-          // vertical-align: middle;
-          // resize: horizontal;
-          font-size: 16px;
-          color: #434A54;
-          // left: 300px;
-          padding-left: 10px;
-        }
+        // line-height: 50px;
+        width: calc(100% - 150px);
+        padding-left: 10px;
+        vertical-align: middle;
+        font-size: 16px;
+        color: #434A54;
+        float: left;
       }
+
       .form__mask {
         height: 50px;
         width: 40px;
         float: left;
         background-color: white;
-        margin: 20px 0px 20px 0px;
-        // clear: left;
+        margin: 0px 15px 0px 0px;
         color: black;
+
         i.fa.fa-picture-o.icon {
-          float: right;
-          padding: 18px 10px 0px 0px;
+          clear: left;
+          padding: 18px 10px 18px 10px;
           color: black;
         }
-      }
-      .square_buttom {
-        // clear: left;
-        height: 50px;
-        width: 70px;
-        line-height: 50px;
-        // position: relative;
-        // display: inline-block;
-        background-color: #38AEF0;
-        float: left;
-        margin: 20px 40px 20px 15px;
+
         .form__submit {
+          height: 50px;
+          width: 70px;
+          line-height: 50px;
           color: white;
+          background-color: #38AEF0;
           text-align: center;
+          margin: 0px 0px 0px 15px;
+          float: right;
         }
       }
     }
