--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -31,6 +31,7 @@
     .header {
       height: 100px;
       background-color: #253141;
+      padding: 0px 20px 0px 20px;
       .header__name {
         // height: 100px;
         // width: 260px;
@@ -38,17 +39,26 @@
         font-size: 16px;
         font-weight: bold;
         vertical-align: middle;
-        padding: 0px 20px 0 20px;
+        // padding: 0px 20px 0 20px;
         line-height: 106px;
         float: left;
         display:inline-block;
       }
-        .header__icon{
-          float: right;
-          color: white;
-          padding: 35px 20px 0px 0px;
+      .header__lists {
+        float: right;
+        .list {
+          height: 100px;
+          width: 16px;
+          .fa {
+            color: white;
+            float: right;
+            vertical-align: middle;
+            line-height: 106px;
+            display:inline-block;
+          }
         }
       }
+    }
 
     .group {
       height: 900px;
